<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="app.eatit.appeatit.MenuActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wanttoeat"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/btn1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:text="@string/mealOption1"
        android:background="@drawable/menu_button"
        android:textColor="@color/white"
        />
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/mealOption2"
        android:background="@drawable/menu_button"
        android:textColor="@color/white"
        />
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/mealOption3"
        android:background="@drawable/menu_button"
        android:textColor="@color/white"
        />
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/mealOption4"
        android:background="@drawable/menu_button"
        android:textColor="@color/white"
        />
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/mealOption5"
        android:background="@drawable/menu_button"
        android:textColor="@color/white"
        />
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/mealOption6"
        android:background="@drawable/menu_button"
        android:textColor="@color/white"
        />




</LinearLayout>
