<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetalhesPratoActivity">

    <include
        layout="@layout/toolbar"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >




        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/imageView"
            android:src="@drawable/prato2"
            />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Reserve"
            android:id="@+id/btnReservar"
            android:layout_below="@+id/imageView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/menu_button"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/nomeRefeicao"
            android:layout_below="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nome Refeicao"
            android:textColor="@color/black"
            android:textSize="22sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nomeRefeicao"
            android:textColor="@color/red"
            android:text="$15"
            android:textSize="20sp"
            android:id="@+id/preco"
            />
        <LinearLayout
            android:id="@+id/avaliacoes"
            android:layout_below="@+id/preco"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chefe"
                android:src="@drawable/star"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chefe"
                android:src="@drawable/star"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/avaliacoes"

            >
            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"

                >
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingRight="2dp"
                        >

                        <TextView
                            android:text="@string/chef"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:drawableLeft="@drawable/chefe_hat"
                            android:drawablePadding="5dp"
                            />
                        <ImageView

                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:maxWidth="100dp"
                            android:maxHeight="100dp"
                            android:src="@drawable/chef"
                            android:id="@+id/imgChefe" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingRight="2dp"
                        >

                        <TextView
                            android:text="@string/place"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:drawableLeft="@drawable/home"
                            android:drawablePadding="5dp"
                            />
                        <ImageView

                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:maxWidth="100dp"
                            android:maxHeight="100dp"
                            android:src="@drawable/house"
                            android:scaleType="centerInside"
                            android:id="@+id/imgCasa" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingRight="5dp"

                        >

                        <TextView
                            android:text="@string/food"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:drawableLeft="@drawable/dinner"
                            android:drawablePadding="5dp"
                            />
                        <ImageView

                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:maxWidth="100dp"
                            android:maxHeight="100dp"
                            android:src="@drawable/prato2"
                            android:id="@+id/imgFood" />
                    </LinearLayout>



                </LinearLayout>

            </HorizontalScrollView>


        </RelativeLayout>






    </RelativeLayout>

</LinearLayout>
